# course_work_3_repo

./: README.md  config.py  main.py  pyproject.toml
src/: operation.py  utils.py
tests/: test_operation.py  test_utils.py
